--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.15.1",
     "@mui/styles": "^6.1.2",
     "@reduxjs/toolkit": "^2.2.3",
+    "@supabase/supabase-js": "^2.48.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
