--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
+    "vercel": "^39.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
